fix: use InputStream for classpath resource loading + fix local DB URL